# core-etl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  crc20.sol  docker-compose-init.yml  docker-compose-local.yml  docker-compose-remote.yml  docker-compose.yml  postgresql.conf
.github/workflows/: ci.yml  docker.yml
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/contracts/cbc20/: Cargo.toml
crates/contracts/cbc20/src/: cbc20.rs  constants.rs  lib.rs
crates/contracts/contracts/: Cargo.toml
crates/contracts/contracts/src/: lib.rs  transfer.rs
crates/contracts/kyc_vault/src/: kyc_vault.rs
crates/etl/: Cargo.toml
crates/etl/src/: error.rs  etl.rs  lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: error.rs  lib.rs  provider.rs
crates/storage/d1/: Cargo.toml
crates/storage/d1/src/: d1.rs  lib.rs
crates/storage/mock/: Cargo.toml
crates/storage/mock/src/: lib.rs  mock.rs
crates/storage/postgres/: Cargo.toml
crates/storage/postgres/src/: error.rs  lib.rs  postgres.rs
crates/storage/sqlite3/: Cargo.toml
crates/storage/sqlite3/src/: lib.rs  sqlite3.rs
crates/storage/storage/: Cargo.toml
crates/storage/storage/src/: storage.rs
crates/storage/xata/: Cargo.toml
crates/storage/xata/src/: error.rs  lib.rs  xata.rs
crates/types/: Cargo.toml
crates/types/src/: block.rs  lib.rs  network.rs  sync.rs  token_transfer.rs  transaction.rs  transfer_type.rs
docker-compose/: docker-compose-init-libsql.yml  docker-compose-local-libsql.yml  docker-compose-local-postgres.yml  docker-compose-remote-libsql.yml  docker-compose-remote-postgres.yml
