[package]
authors = { workspace = true }
description = "Cloudflare D1 storage for ETL"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["core blockchain", "xcb", "etl", "d1-storage"]
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
name = "d1_storage"
publish = true

[dependencies]

storage.workspace = true
types.workspace = true
base-primitives = { workspace = true}
tracing.workspace = true

async-trait.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
tokio.workspace = true