[package]
authors = { workspace = true }
description = "Postgres connector for ETL"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["core blockchain", "xcb", "etl", "postgres-storage"]
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
name = "postgres_storage"
publish = true

[dependencies]

storage.workspace = true
types.workspace = true
base-primitives = { workspace = true}
tracing.workspace = true

async-trait.workspace = true
sqlx.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }