[package]
authors = { workspace = true }
description = "SQLite3 storage for ETL"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["core blockchain", "xcb", "etl", "sqlite3-storage"]
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
name = "sqlite3_storage"
publish = true

[dependencies]

storage.workspace = true
types.workspace = true
base-primitives = { workspace = true}
tracing.workspace = true

async-trait.workspace = true
sqlx.workspace = true